# ontorag-mcp

./: .gitignore  .vercelignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
api/: index.py
ontorag_mcp/: __init__.py  asgi.py  redis_store.py  server.py  store.py
tests/: hybrid_smoke.py  mirage_probe.py  ontology_smoke.py  redis_smoke.py  smoke.py  vercel_asgi_test.py
